--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Nicholas Rodgers</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans" rel="stylesheet">
         <script src="index.js"></script>
     </head>
     <body>
