--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <div class="header">
-        <h1>Nicholas Rodgers</h1>
-        </div>
-        <div class="sidebar" ></div>
-        <div class="main-content">  
-            <h2>Education</h2> 
-            <p>
-                Nick is a Sophmore at Utah State University currently studying Computer Science.
-                He is also working on minors in Math and Spanish.
-            </p>
-            <h2>Work Experience</h2>
-            <p>
-                Nick is currently employed at the Space Dynamics Lab in Logan, Utah, as a Web Developer's Assistant.
-            </p>
-            <h2>Skills</h2>
-            <h2>Projects</h2>
-        </div>
-        <div class="footer"></div>
+        <div class="parallax"></div>
+            <div class="header">
+                <h1>Nicholas Rodgers</h1>
+            </div>
+            <div class="sidebar" ></div>
+            <div class="main-content">  
+                <h2>Education</h2> 
+                <p>
+                    Nick is a Sophmore at Utah State University currently studying Computer Science.
+                    He is also working on minors in Math and Spanish.
+                </p>
+                <h2>Work Experience</h2>
+                <p>
+                    Nick is currently employed at the Space Dynamics Lab in Logan, Utah, as a Web Developer's Assistant.
+                </p>
+                <h2>Skills</h2>
+                <h2>Projects</h2>
+            </div>
+            <div class="footer"></div>
+
     </body>
 </html>
