--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Nicholas Rodgers</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="index.js"></script>
     </head>
     <body>
@@ -23,7 +24,21 @@
                     Nick is currently employed at the Space Dynamics Lab in Logan, Utah, as a Web Developer's Assistant.
                 </p>
                 <h2>Skills</h2>
+                <h3>Programming</h3>
+                <ul>
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>TCL</li>
+                    <li>C++</li>
+                    <li>Java</li>
+                </ul>
+                <h3>Other Skills</h3>
+                <ul>
+                    <li>Basic Understanding of Spanish</li>
+                </ul>
                 <h2>Projects</h2>
+                <div class="slideshow">
+                    <img src="images/trees.png">
+                </div>
             </div>
             <div class="footer"></div>
 
