--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <div class="slideshow">
                     <img src="images/trees.png">
                 </div>
+                <div>
+                    <canvas id="myCanvas" width="500" height="500"></canvas>
+                </div>
             </div>
             <div class="footer"></div>
 
