Added a couple new things

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     </head>
     <body>
         <div class="parallax"></div>
-            <div class="header">
+            <header>
                 <h1>Nicholas Rodgers</h1>
-            </div>
+                <div class="nav">
+                    <ul>
+                        <li>Contact</li>
+                        <li>Developer</li>
+                        <li>Games</li>
+                        <li>Drawing</li>
+                        <li>Video</li>
+                    </ul>
+                </div>
+            </header>
             <div class="sidebar" ></div>
             <div class="main-content">  
                 <h2>Education</h2> 
@@ -19,7 +28,12 @@
                     Nick is a Sophmore at Utah State University currently studying Computer Science.
                     He is also working on minors in Math and Spanish.
                 </p>
+                <p>
+                    Nick is secretary of the USU ACM Club
+                </p>
                 <h2>Work Experience</h2>
+                <h3>Web developer's Assistant</h3>
+                <h4>January 2017 - Present</h4>
                 <p>
                     Nick is currently employed at the Space Dynamics Lab in Logan, Utah, as a Web Developer's Assistant.
                 </p>
@@ -33,7 +47,7 @@
                 </ul>
                 <h3>Other Skills</h3>
                 <ul>
-                    <li>Basic Understanding of Spanish</li>
+                    <li>Can speak Spanish at an elementary elvel</li>
                 </ul>
                 <h2>Projects</h2>
                 <div class="slideshow">
