--- a/sorting/index.html
+++ b/sorting/index.html
@@ -13,8 +13,10 @@
         <main>
             <div class="button-area">
                 <button id="sort-button" type="button">Sort!</button>
+                <!-- <button id="image-button" type="button">Image</button> -->
             </div>
             <canvas id="sorting-canvas" width="500" height="500"></canvas>
+            <img id="fried" src="../images/fried.jpg">
         </main>
     </body>
 </html>
